<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping</name>
  <version>0.7.25</version>
  <description>Generates an elevation map from distance measurements and robot pose information.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/elevation_mapping</url>
  <url type="bugtracker">http://github.com/anybotics/elevation_mapping/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>kindr</depend>
  <depend>kindr_ros</depend>
  <depend>message_filters</depend>
  <depend>message_logger</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
</package>
